# gasuite

./: .gitignore  pyproject.toml  requirements-dev.txt
examples/: geometric_gtsp.ipynb  geometric_tsp.ipynb  geometric_tsp_open.ipynb
src/gasuite/: __init__.py  brkga.py
src/gasuite/problems/: __init__.py  geometric_tsp.py
src/gasuite/problems/tsp/: generalized_tsp.py  tsp.py
src/gasuite/utils/: multirun.py  optim.py
tests/: test_brkga_TSP.py  test_brkga_basics.py
tests/problems/: test_geom_tsp.py
tests/utils/: test_multirun.py  test_optim.py
