# pip build --wheel .

[project]
name = "gasuite"
version = "0.0.1"
description = "A suite of Genetic Algorithms"
keywords = [
	"genetic algorithms", "Real Coded GA", "RKGA", "BRKGA", "combinatorial optimization", "TSP"
]
license = "Apache-2.0"
authors = [
	{name = "Laikan Muk", email = "lkmuk2017@gmail.com"},
]

dependencies = [
 "numpy >= 1.16",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/mga"]

[tool.hatch.build.targets.wheels]
only-include = ["src/mga"]
